// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardButton baseline should render empty 1`] = `
<div>
  <div
    aria-label="Empty card"
    class="CardButton empty pointer"
    role="button"
  >
    <p
      class="CardValue"
    />
    <p
      class="CardSuit"
    />
  </div>
</div>
`;

exports[`CardButton baseline should render selected 1`] = `
<div>
  <div
    aria-label="Ace of Hearts"
    class="CardButton selected pointer"
    role="button"
  >
    <p
      class="CardValue"
    >
      A
    </p>
    <p
      class="CardSuit"
    >
      ♥
    </p>
  </div>
</div>
`;

exports[`CardButton baseline should render unselected 1`] = `
<div>
  <div
    aria-label="Ace of Hearts"
    class="CardButton pointer"
    role="button"
  >
    <p
      class="CardValue"
    >
      A
    </p>
    <p
      class="CardSuit"
    >
      ♥
    </p>
  </div>
</div>
`;
